...
					</C.MenuItem>
					<C.MenuItem onPress={goTo(routes.boardHelp)}>
						<C.MenuLabel>{t`Help`}</C.MenuLabel>
						<C.MenuIcon icon="info" />
					</C.MenuItem>
					<C.MenuItem onPress={goTo(routes.settings)} last>
						<C.MenuLabel>{t`Settings`}</C.MenuLabel>
						<C.MenuIcon icon="wrench" />
					</C.MenuItem>
				</C.Menu>
			)}
		</C.Container>
	);
...
