...

	"Give action": "Give action",
	"Not selected": "Not selected",
	"Add wild": "Add wild",
	"Keep awake": "Keep awake",
	"Track Hand Size": "Track Hand Size",
	"Doom": "Doom",
	"General": "General",
	"Sound Effects": "Sound Effects",
	"Volume": "Volume",

	"New Game": "New Game",
	"Versions": "Versions",
...
